# transport/http/handler/checkOut.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"encoding/json"
 	"github.com/google/uuid"
 	"github.com/gorilla/mux"
 	"github.com/yanarowana123/onelab2/internal/models"
@@ -10,28 +11,26 @@ import (
 // CheckOut
 // @Summary checkout book
 // @Description checkout book
-// @Tags checkOut
-// @Param bookID path string true "Book ID (UUID format)"
+// @Tags checkout
+// @Param checkout body models.CreateCheckoutRequest true "body"
 // @Security ApiKeyAuth
 // @Success 204
 // @Failure 404 "book not found"
 // @Failure 400 "you already have checked out this book"
-// @Router /checkout/{bookID} [post]
+// @Router /checkout [post]
 func (h *Manager) CheckOut() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		w.Header().Set("Content-Type", "application/json")
 
-		var createCheckOutRequest models.CreateCheckOutRequest
-		params := mux.Vars(r)
-		bookID, err := uuid.Parse(params["bookID"])
+		var createCheckOutRequest models.CreateCheckoutRequest
+		err := json.NewDecoder(r.Body).Decode(&createCheckOutRequest)
 
-		_, err = h.service.Book.GetByID(r.Context(), bookID)
+		createCheckOutRequest.UserID = r.Context().Value("userID").(uuid.UUID)
+		_, err = h.service.Book.GetByID(r.Context(), createCheckOutRequest.BookID)
 		if err != nil {
 			h.respondWithError(w, http.StatusNotFound, err.Error())
 			return
 		}
-		createCheckOutRequest.BookID = bookID
-		createCheckOutRequest.UserID = r.Context().Value("userID").(uuid.UUID)
 
 		err = h.validate.Struct(createCheckOutRequest)
 		if err != nil {
@@ -52,7 +51,7 @@ func (h *Manager) CheckOut() http.HandlerFunc {
 // Return
 // @Summary return book
 // @Description return book
-// @Tags checkOut
+// @Tags checkout
 // @Param bookID path string true "Book ID (UUID format)"
 // @Security ApiKeyAuth
 // @Success 204
@@ -62,7 +61,7 @@ func (h *Manager) Return() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		w.Header().Set("Content-Type", "application/json")
 
-		var createCheckOutRequest models.CreateCheckOutRequest
+		var returnBookRequset models.ReturnBookRequest
 		params := mux.Vars(r)
 		bookID, err := uuid.Parse(params["bookID"])
 		_, err = h.service.Book.GetByID(r.Context(), bookID)
@@ -71,16 +70,16 @@ func (h *Manager) Return() http.HandlerFunc {
 			return
 		}
 
-		createCheckOutRequest.BookID = bookID
-		createCheckOutRequest.UserID = r.Context().Value("userID").(uuid.UUID)
+		returnBookRequset.BookID = bookID
+		returnBookRequset.UserID = r.Context().Value("userID").(uuid.UUID)
 
-		err = h.validate.Struct(createCheckOutRequest)
+		err = h.validate.Struct(returnBookRequset)
 		if err != nil {
 			h.respondWithErrorList(w, http.StatusBadRequest, err)
 			return
 		}
 
-		err = h.service.CheckOut.Return(r.Context(), createCheckOutRequest)
+		err = h.service.CheckOut.Return(r.Context(), returnBookRequset)
 		if err != nil {
 			h.respondWithError(w, http.StatusInternalServerError, err.Error())
 			return
