# transport/http/router.go
@@ -3,15 +3,10 @@ package http
 import (
 	"github.com/gorilla/mux"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
-	_ "github.com/yanarowana123/onelab2/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/yanarowana123/onelab2/transport/http/handler"
 	"net/http"
 )
 
-// InitRouter
-// @securityDefinitions.apikey ApiKeyAuth
-// @in header
-// @name Authorization
 func InitRouter(r *mux.Router, h handler.Manager) *mux.Router {
 	//TODO add auth to swagger
 	r.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
@@ -32,7 +27,7 @@ func InitRouter(r *mux.Router, h handler.Manager) *mux.Router {
 	r.HandleFunc("/book", h.TokenValidateMiddleware(h.CreateBook())).Methods("POST")
 	r.HandleFunc("/book/{bookID}", h.TokenValidateMiddleware(h.GetBookByID())).Methods("GET")
 
-	r.HandleFunc("/checkout/{bookID}", h.TokenValidateMiddleware(h.CheckOut())).Methods("POST")
+	r.HandleFunc("/checkout", h.TokenValidateMiddleware(h.CheckOut())).Methods("POST")
 	r.HandleFunc("/return/{bookID}", h.TokenValidateMiddleware(h.Return())).Methods("POST")
 
 	return r
